--- a/package.json
+++ b/package.json
@@ -17,10 +17,16 @@
   "author": "Khalil Stemmler <khalil@apollographql.com>",
   "license": "ISC",
   "dependencies": {
+    "@types/graphql-upload": "^8.0.4",
     "@types/node": "^13.1.6",
     "apollo-server": "^2.9.16",
     "aws-sdk": "^2.600.0",
     "cloudinary": "^1.18.1",
+    "dotenv": "^9.0.2",
+    "graphql": "^15.5.0",
+    "graphql-type-json": "^0.3.2",
+    "graphql-upload": "^12.0.0",
+    "ts-node": "^9.1.1",
     "typescript": "^3.7.4"
   },
   "devDependencies": {
